# Cpp-tasks

./: README.md
homework/: 12-1.cpp  12-2.cpp  13.cpp  14-1.cpp  14-2.cpp  15.cpp
task 1/: CMakeLists.txt  main.cpp
task 1/modules/: circular_buffer.cpp  circular_buffer.hpp
task 1/tests/: CMakeLists.txt  tests.cpp
task_2/: CMakeLists.txt  main.cpp
task_2/modules/: ArgumentParser.cpp  Calculator.cpp  GameOfLife.hpp  Interface.cpp  Keeper.cpp  WReader.cpp
task_2/presets/: LWSS.life  big_A.life  copperhead.life  moon.life  pulsar.life
task_2/tests/: CMakeLists.txt  tests.cpp
task_2/tests/read_tests/: coordinates_out_of_scope.life  invariant_of_normal.life  normal_file.life  with_9_in_rules.life  without_numbers_of_rules.life  wrong_rules_format1.life  wrong_rules_format2.life  wrong_size_format.life  wrong_title.life  wrong_title_format.life
